Publish page: Fix the weird position of import and publishing wrap when importing

--- a/public/stylesheets/publish/style.sass
+++ b/public/stylesheets/publish/style.sass
@@ -36,9 +36,9 @@ html, body
     z-index: 10
     width: 450px
     position: absolute
-    top: 45%
+    top: 12px
     left: 50%
-    transform: translate(-50%, -50%)
+    transform: translateX( -50%)
     background-color: $bg_deep_black
     color: $txt_white
     .container
@@ -111,9 +111,9 @@ html, body
   .import_area_wrap
     display: none
     position: absolute
-    top: 45%
+    top: 200px
     left: 50%
-    transform: translate(-50%, -50%)
+    transform: translateX(-50%)
     border: 1px solid $txt_white
     width: 75%
     padding: 35px
